consonance/consonance.css
/* CSS declarations go here */

body{
	background-color: #16BF7C;
}

span {
    color: white;
    font-size: 20px;
    margin-left: 10px;
}

h3 {
	text-align: right;
	color: white;
}

hr {
    border-color:black;
    border-width: 5px;
    width: 85%;
}

ul > hr {
    border-color: white;
    border-width: 1px;
    width: 100%;
}

.navbar_item {
    color: white;
    font-size: 15px;
}

li:hover {
    cursor: pointer;
}

#navigation {
    position: fixed;
    top: 0;
    width: 100%;
    background: black;
    border: 0;
    z-index: 100;
}

#record{
	color: #222;
	font-size: 5em;
}

#stop{
	color: #222;
	font-size: 3em;
}

.btn-success {
	background-color: #04AF6C;
}

btn-success:focus {
	background-color: #FFF; 
}

.icBtn{
	height:100%;
	width: 90px;
}

.ic{
	border-radius: 3px;
	vertical-align: middle;
	text-align: center;
}

#recordmenu{
    margin-left: auto;
    margin-right: auto;
    height: 30%;
    text-align: center;
    vertical-align: middle;
}

#container{
    position: absolute;
    left: auto;
    right: auto;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    vertical-align: middle;
    height: 100%;
}

#image_container{
    margin-top: 25%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    vertical-align: middle;
    width: 100%;
}

#about_text {
    margin-top: 10px;
    font-weight: bold;
}

#howtouse{
    margin-top: 50%;
    width: 100%;
    height: 70%;
    display: table;
    overflow: hidden;
    text-align: center
}

#howtouse_text{
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    font-weight: bold;
}

#home_content {
    margin-top: 25%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    vertical-align: middle;
    width: 100%;
}

#home_text {
    text-align: center;
    font-weight: bold;
    color: black;
    font-size: 30px;
}

#pagecontent{
    margin-top: 30%;
	position: absolute;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
	width: 100%;
    height: 70%;
    vertical-align: middle;
}

#about_text {
    text-align: center;
}

.topbar{
	height: 5%;
	padding: 6px;
}

#uploadfile{
    padding-top: 20px;
}

input[type=file]{
    border-radius: 3px;
    padding: 10px 15px 11px !important;
    font-size: 18px !important;
    background-color: #04AF6C;
    font-weight: bold;
    color: #ffffff;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid #04AF6C;
    cursor: pointer;
}

input[type=submit]{
    margin-top: 5px;
    border-radius: 3px;
    padding: 10px 15px 11px !important;
    font-size: 18px !important;
    background-color: #04AF6C;
    font-weight: bold;
    color: #ffffff;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid #04AF6C;
    cursor: pointer;
}

